[CSSRegions] Incorrect computed height for content with region-break-before https://bugs.webkit.org/show_bug.cgi?id=101862

Reviewed by Julien Chaffraix.

Source/WebCore:

When processing the region breaks for auto-height regions, we skipped the case
when the region-break-before occurred in the first region in the chain which was
an auto-height region. Because of that, the region computed height was not 0
as it was supposed to be, but rather LayoutUnit::max() / 2.

Test: fast/regions/autoheight-breakbefore-wrongheight.html

* rendering/RenderFlowThread.cpp:
(WebCore::RenderFlowThread::addForcedRegionBreak):
Make sure we process also the case when the region-break occurs at offset 0 in the flow thread
and the first region in chain is an auto-height region.
* rendering/RenderRegion.cpp:
(WebCore::RenderRegion::updateLogicalHeight):
Add an assert to make sure that the computed height for auto-height regions is always less than LayoutUnit::max() / 2.

LayoutTests:

Add a test showing that when content having -webkit-region-break-before:always is flowed
into a region chain with the first region being an auto-height region, the auto-height region
has a computed height of 0 and the content is flowed into the second region in the chain.

* fast/regions/autoheight-breakbefore-wrongheight-expected.txt: Added.
* fast/regions/autoheight-breakbefore-wrongheight.html: Added.


Canonical link: https://commits.webkit.org/120134@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134395 268f45cc-cd09-0410-ab3c-d52691b4dbfc